Implement ngRx entity for post listing

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.14",
     "@ng-bootstrap/ng-bootstrap": "^5.2.1",
     "@ngrx/effects": "^8.6.0",
+    "@ngrx/entity": "^8.6.0",
     "@ngrx/store": "^8.6.0",
     "bootstrap": "^3.4.1",
     "ngx-toastr": "^11.3.0",
