--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngrx/entity": "^8.6.0",
     "@ngrx/store": "^8.6.0",
     "bootstrap": "^3.4.1",
+    "ngx-infinite-scroll": "^8.0.1",
     "ngx-toastr": "^11.3.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
