--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^3.4.1",
     "ngx-infinite-scroll": "^8.0.1",
     "ngx-toastr": "^11.3.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
