--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@ngrx/store": "^8.6.0",
     "bootstrap": "^3.4.1",
     "ngx-infinite-scroll": "^8.0.1",
+    "ngx-spinner": "^8.1.0",
     "ngx-toastr": "^11.3.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.4.0",
+    "time-ago-pipe": "^1.3.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
